# fetchAZA

./: .buildinfo  README.md  about.html  aboutfetch.html  demo-output.html  demo-output.ipynb  faq.html  fetchAZA.html  format_AZA.html  funding.html  genindex.html  gitcollab.html  github.html  gitorg.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  tag_release.py
.github/workflows/: pypi.yml
_modules/: index.html
_modules/fetchAZA/: convertAZA.html  plotters.html  readers.html  tools.html  utilities.html  writers.html
_sources/: aboutfetch.md.txt  demo-output.ipynb.txt  funding.md.txt
docs/source/: AZApressure.rst  about.md  conf.py  faq.md  funding.md  index.rst  installation.md
fetchAZA/: __init__.py  _version.py  convertAZA.py  readers.py  timetools.py  tools.py  utilities.py  writers.py
notebooks/: demo.ipynb
tests/: test_readers.py  test_timetools.py  test_tools.py  test_utilities.py
